--- a/index.html
+++ b/index.html
@@ -102,6 +102,25 @@
                     <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6">Safe Rides.<br>By Women.<br>For Women.</h1>
                     <p class="text-xl mb-8">India's first all-women taxi service providing safe and comfortable rides with enhanced security features.</p>
                     <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
+                        <!-- Ride Booking Box -->
+<div class="bg-white text-gray-800 p-6 rounded-xl shadow-xl mt-8 max-w-md">
+    <h3 class="text-xl font-bold mb-4 text-pink-600">Estimate Your Ride</h3>
+
+    <input id="pickup" type="text" placeholder="Pickup Location"
+        class="w-full border border-gray-300 rounded-lg px-4 py-2 mb-3 focus:outline-none focus:ring-2 focus:ring-pink-500">
+
+    <input id="destination" type="text" placeholder="Destination"
+        class="w-full border border-gray-300 rounded-lg px-4 py-2 mb-3 focus:outline-none focus:ring-2 focus:ring-pink-500">
+
+    <input id="distance" type="number" placeholder="Distance (in km)"
+        class="w-full border border-gray-300 rounded-lg px-4 py-2 mb-4 focus:outline-none focus:ring-2 focus:ring-pink-500">
+
+    <button onclick="calculateFare()"
+        class="w-full bg-pink-600 text-white py-3 rounded-lg font-semibold hover:bg-pink-700">
+        Calculate Fare
+    </button>
+</div>
+
                         <button class="bg-white text-pink-600 px-6 py-3 rounded-full font-medium hover:bg-gray-100 transition duration-200">
                             Book Now
                         </button>
@@ -822,6 +841,57 @@
             });
         });
     </script>
+   <!-- Fare Result Modal -->
+<div id="fareModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center">
+    <div class="bg-white rounded-xl p-8 max-w-sm text-center shadow-2xl">
+        <h2 class="text-2xl font-bold text-pink-600 mb-4">Estimated Fare</h2>
+        <p id="fareResult" class="text-lg text-gray-700 mb-6"></p>
+        <button onclick="closeModal()" class="bg-pink-600 text-white px-6 py-2 rounded-lg hover:bg-pink-700">
+            OK
+        </button>
+    </div>
+</div>
+<script>
+
+function calculateFare() {
+
+    let pickup = document.getElementById("pickup").value;
+    let destination = document.getElementById("destination").value;
+    let distance = document.getElementById("distance").value;
+
+    // Validation
+    if(pickup === "" || destination === "" || distance === "") {
+        alert("Please fill all fields");
+        return;
+    }
+
+    if(distance <= 0) {
+        alert("Distance must be greater than 0");
+        return;
+    }
+
+    // Pricing logic
+    let baseFare = 50;          // starting price
+    let perKmRate = 12;         // ₹12 per km
+    let safetyCharge = 20;      // safety service charge
+
+    let totalFare = baseFare + (distance * perKmRate) + safetyCharge;
+
+    // Show result
+    document.getElementById("fareResult").innerHTML =
+        "From <b>" + pickup + "</b> to <b>" + destination +
+        "</b><br>Total Fare: <b>₹" + totalFare + "</b>";
+
+    document.getElementById("fareModal").classList.remove("hidden");
+    document.getElementById("fareModal").classList.add("flex");
+}
+
+function closeModal() {
+    document.getElementById("fareModal").classList.add("hidden");
+}
+
+</script>
+
 </body>
 </html>
 
